feat: add installer script

--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,14 @@ venv
 *.db
 doberman.config
 
+### Jetbrains ###
+.idea
+
 ### Linux ###
 *~
+
+### MacOS ###
+.DS_Store
 
 # temporary files which can be created if a process still has a handle open of a deleted file
 .fuse_hidden*
